--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,8 @@ buildscript {
         room_version = '2.5.1'
         dagger_version = '2.44'
         hilt_version = '2.45'
-        hilt_compose = '1.0.0-alpha03'
+        hilt_compose_version = '1.0.0-alpha03'
+        kotlinx_serializatio = '1.5.0'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
@@ -14,4 +15,6 @@ plugins {
     id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
     id 'com.google.dagger.hilt.android' version '2.44' apply false
+    id 'org.jetbrains.kotlin.jvm' version '1.8.0'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.8.0'
 }
